--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
     <head>
         <meta charset="UTF-8"/>
 <title> Web Design </title>
+<link rel <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,400;1,6..12,300;1,6..12,400&display=swap" rel="stylesheet">
+<link rel ="stylesheet" href="css/app.css"/>
     </head>
     <body>
 <h1>TRANG CHỦ VARLORANT</h1>
@@ -10,8 +14,8 @@
 <H4><a>TĂNG SỨC MẠNH CHAMP GEKKO</a></H4>
 <H5>WING MAN DI CHUYỂN NHANH HƠN</H5>
 <h6><del>150</del> TO 200</h6>
-<P><b>Mang phong cách và trải nghiệm cá nhân tới đấu trường cạnh tranh toàn cầu</b>. Sử dụng kỹ năng đấu súng cùng với lối tư duy chiến thuật sắc bén với hai phe tấn công và phòng thủ, thành bại được định đoạt chỉ trong 13 vòng đấu. Với chỉ 1 mạng mỗi vòng đấu, sự nhanh nhẹn và quyết đoán sẽ là yếu tố giúp bạn sống sót. Trải nghiệm VALORANT trong các chế độ chơi: Đấu Xếp Hạng, Đấu Thường, Sinh Tử và Spike Thần Tốc.</P>
-<P><i>Mang phong cách và trải nghiệm cá nhân tới đấu trường cạnh tranh toàn cầu</i> Sử dụng kỹ năng đấu súng cùng với lối tư duy chiến thuật sắc bén với hai phe tấn công và phòng thủ, thành bại được định đoạt chỉ trong 13 vòng đấu. Với chỉ 1 mạng mỗi vòng đấu, sự nhanh nhẹn và quyết đoán sẽ là yếu tố giúp bạn sống sót. Trải nghiệm VALORANT trong các chế độ chơi: Đấu Xếp Hạng, Đấu Thường, Sinh Tử và Spike Thần Tốc.</P>
+<P class="hoahau thisinh"><b>Mang phong cách và trải nghiệm cá nhân tới đấu trường cạnh tranh toàn cầu</b>. Sử dụng kỹ năng đấu súng cùng với lối tư duy chiến thuật sắc bén với hai phe tấn công và phòng thủ, thành bại được định đoạt chỉ trong 13 vòng đấu. Với chỉ 1 mạng mỗi vòng đấu, sự nhanh nhẹn và quyết đoán sẽ là yếu tố giúp bạn sống sót. Trải nghiệm VALORANT trong các chế độ chơi: Đấu Xếp Hạng, Đấu Thường, Sinh Tử và Spike Thần Tốc.</P>
+<P class="thisinh"><i>Mang phong cách và trải nghiệm cá nhân tới đấu trường cạnh tranh toàn cầu</i> Sử dụng kỹ năng đấu súng cùng với lối tư duy chiến thuật sắc bén với hai phe tấn công và phòng thủ, thành bại được định đoạt chỉ trong 13 vòng đấu. Với chỉ 1 mạng mỗi vòng đấu, sự nhanh nhẹn và quyết đoán sẽ là yếu tố giúp bạn sống sót. Trải nghiệm VALORANT trong các chế độ chơi: Đấu Xếp Hạng, Đấu Thường, Sinh Tử và Spike Thần Tốc.</P>
 <P><u>Mang phong cách và trải nghiệm cá nhân tới đấu trường cạnh tranh toàn cầu</u> Sử dụng kỹ năng đấu súng cùng với lối tư duy chiến thuật sắc bén với hai phe tấn công và phòng thủ, thành bại được định đoạt chỉ trong 13 vòng đấu. Với chỉ 1 mạng mỗi vòng đấu, sự nhanh nhẹn và quyết đoán sẽ là yếu tố giúp bạn sống sót. Trải nghiệm VALORANT trong các chế độ chơi: Đấu Xếp Hạng, Đấu Thường, Sinh Tử và Spike Thần Tốc.</p>    
 <P>NHIỆT ĐỘ HÔM NAY LÀ : 32<sup>o</sup>C &nbsp; log<sub>10</sub>20 </P>
 <img src="images/gekko-1-1679385499-74.jpg" width="300" height="100"/> src :
